# cli_env_toml

./: .env  .envrc  .gitignore  Cargo.toml  README.md  README.mdt  dist.sh  env  out.txt  run.sh
src/: env.rs  lib.rs  merge.rs
