[package]
name = "toml_conf"
version = "0.1.13"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/xxai-art/toml_conf"
repository = "https://github.com/xxai-art/toml_conf.git"
description = "用于从环境变量、命令行参数生成 toml，然后与已有的 toml 文件做配置合并。"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
toml = "0.7.4"